Add Hugging Face dataset integration for ResNet-50 training
- Introduced data_hf.py for loading ImageNet dataset from Hugging Face, replacing local data handling.
- Added demo_hf_concept.py to showcase integration with public datasets like CIFAR-10.
- Implemented setup_hf_auth.py for user authentication with Hugging Face.
- Created test_hf_setup.py to verify dataset loading and model functionality.
- Updated requirements.txt to include Hugging Face libraries.
- Enhanced README_HUGGINGFACE.md with setup instructions and usage guidelines for training with Hugging Face datasets.

--- a/ResNet_50_Mini_Capstone/requirements.txt
+++ b/ResNet_50_Mini_Capstone/requirements.txt
@@ -8,6 +8,10 @@ pillow>=9.5.0
 opencv-python>=4.7.0
 scikit-image>=0.20.0
 
+# Hugging Face datasets (for ImageNet)
+datasets>=4.0.0
+huggingface_hub>=0.15.0
+
 # Logging and visualization
 tensorboard>=2.13.0
 matplotlib>=3.7.0
