--- a/ResNet_50_Mini_Capstone/requirements.txt
+++ b/ResNet_50_Mini_Capstone/requirements.txt
@@ -22,6 +22,10 @@ tqdm>=4.65.0
 pyyaml>=6.0
 pandas>=2.0.0
 
+# Accessing S3
+boto3>=1.28.0
+s3fs>=2023.10.0
+
 # Optional: For distributed training
 # torch-ddp>=0.1.0  # Uncomment if using distributed training
 
