Revise fine-tuning configuration in finetune.yaml for ResNet-50
- Updated learning rate decay with increased weight decay for stronger regularization.
- Enhanced mixup augmentation by increasing mixup_alpha for improved model robustness.
- Maintained existing settings for optimizer, learning rate, and OneCycle learning rate scheduler for consistency.

--- a/ResNet_50_Mini_Capstone/EC2_Upload_ImageNet1K/finetune.yaml
+++ b/ResNet_50_Mini_Capstone/EC2_Upload_ImageNet1K/finetune.yaml
@@ -1,22 +1,22 @@
-    # Long fine-tuning configuration for ResNet-50
-    optimizer: adamw
-    lr_scheduler: onecycle
-    learning_rate: 0.0003          # CRITICAL: Keep the low learning rate
-    weight_decay: 0.0001
-    epochs: 40                     # A longer 40-epoch schedule for gradual improvement
+# Aggressive fine-tuning configuration to combat overfitting
+optimizer: adamw
+lr_scheduler: onecycle
+learning_rate: 0.0003          # Keep the low learning rate, this is correct
+weight_decay: 0.0002           # INCREASED: Stronger L2 regularization
+epochs: 40                     # Keep the 40-epoch schedule
 
-    # --- Regularization Improvements ---
-    label_smoothing: 0.1
-    mixup_alpha: 0.2
+# --- Regularization Improvements ---
+label_smoothing: 0.1
+mixup_alpha: 0.4               # INCREASED: More aggressive Mixup augmentation
 
-    # --- OneCycleLR specific settings ---
-    onecycle_pct_start: 0.3
-    onecycle_anneal: cos
-    onecycle_final_div_factor: 10000
+# --- OneCycleLR specific settings ---
+onecycle_pct_start: 0.3
+onecycle_anneal: cos
+onecycle_final_div_factor: 10000
 
-    # --- Performance & Logging ---
-    compile_model: true
-    batch_size: 256
-    save_every_n_batches: 500
-    log_interval: 100
-    use_fp16: true
+# --- Performance & Logging ---
+compile_model: true
+batch_size: 256
+save_every_n_batches: 500
+log_interval: 100
+use_fp16: true
