feat: Add S3-aware, performance-optimized ResNet-50 training script with data loading utilities and a full 90-epoch configuration.

--- a/ResNet_50_Mini_Capstone/EC2_Upload_ImageNet1K/train_full.yaml
+++ b/ResNet_50_Mini_Capstone/EC2_Upload_ImageNet1K/train_full.yaml
@@ -8,6 +8,7 @@
     # --- Regularization Improvements ---
     label_smoothing: 0.1
     mixup_alpha: 0.2
+    cutmix_alpha: 1.0
 
     # --- OneCycleLR specific settings ---
     onecycle_pct_start: 0.3
